Closed
Bug 1808733
Opened 2 years ago
Closed 2 years ago
Crash in [@ mozilla::layers::PersistentBufferProviderShared::IsAccelerated]
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
110 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox108 | --- | unaffected |
| firefox109 | + | fixed |
| firefox110 | + | fixed |
People
(Reporter: aryx, Assigned: lsalzman)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
89 crashes for Firefox version 109 and 110 on Windows.
Crash report: https://crash-stats.mozilla.org/report/index/a8d56064-8e98-4be9-bad7-78d230230103
Reason: EXCEPTION_ACCESS_VIOLATION_READ
Top 10 frames of crashing thread:
0 xul.dll mozilla::layers::PersistentBufferProviderShared::IsAccelerated const gfx/layers/PersistentBufferProvider.cpp:662
1 xul.dll mozilla::dom::CanvasRenderingContext2D::BorrowTarget dom/canvas/CanvasRenderingContext2D.cpp:1350
2 xul.dll mozilla::dom::CanvasRenderingContext2D::EnsureTarget dom/canvas/CanvasRenderingContext2D.cpp:1434
3 xul.dll mozilla::dom::CanvasRenderingContext2D::UpdateWebRenderCanvasData dom/canvas/CanvasRenderingContext2D.cpp:5719
4 xul.dll nsHTMLCanvasFrame::UpdateWebRenderCanvasData layout/generic/nsHTMLCanvasFrame.cpp:479
4 xul.dll nsDisplayCanvas::CreateWebRenderCommands layout/generic/nsHTMLCanvasFrame.cpp:148
5 xul.dll mozilla::layers::WebRenderCommandBuilder::CreateWebRenderCommands gfx/layers/wr/WebRenderCommandBuilder.cpp:1822
5 xul.dll mozilla::layers::WebRenderCommandBuilder::CreateWebRenderCommandsFromDisplayList gfx/layers/wr/WebRenderCommandBuilder.cpp:2088
6 xul.dll mozilla::nsDisplayTransform::CreateWebRenderCommands layout/painting/nsDisplayList.cpp:6727
7 xul.dll mozilla::layers::WebRenderCommandBuilder::CreateWebRenderCommands gfx/layers/wr/WebRenderCommandBuilder.cpp:1822
Flags: needinfo?(lsalzman)
| Assignee | ||
Comment 1•2 years ago
|
||
Updated•2 years ago
|
Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Updated•2 years ago
|
Keywords: regression
Comment 2•2 years ago
|
||
Crash volume is high enough that we probably want to get this uplifted before we cut the RC next week.
Pushed by rvandermeulen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/74e70f651dca
Check for null TextureData. r=aosmond
Comment 4•2 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 110 Branch
| Assignee | ||
Comment 5•2 years ago
|
||
Comment on attachment 9310884 [details]
Bug 1808733 - Check for null TextureData. r?aosmond
Beta/Release Uplift Approval Request
- User impact if declined: Crashes when using Canvas2D on Windows.
- Is this code covered by automated tests?: Unknown
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This just adds some straight-forward null pointer checks. It shouldn't break anything and will in all likelihood fix the crashes which seem to be null derefs at these places. Worst case scenario, it shouldn't break anything even if it does nothing. This will be easier to verify the fix once we uplift this to beta.
- String changes made/needed:
- Is Android affected?: No
Attachment #9310884 -
Flags: approval-mozilla-beta?
Comment 6•2 years ago
|
||
Comment on attachment 9310884 [details]
Bug 1808733 - Check for null TextureData. r?aosmond
Approved for 109.0rc1.
Attachment #9310884 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 7•2 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•