Bug 1808733 - Check for null TextureData. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D166093